# auto-procurer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-cloud-run.yml
deploy/: xsource-cloud-run.env.example
docs/: cockpit-journeys.md
docs/contracts/: payment-required-v1.md
docs/plans/: 2026-06-fleet-audit-cloud-run-migration.md  2026-06-fleet-audit-cockpit-journey-map.md  2026-06-fleet-audit-equivalent-cli-mappings.md  2026-06-fleet-audit-hygiene-resilience.md  2026-06-fleet-audit-invoice-to-xbook.md  2026-06-fleet-audit-p4-completion.md  2026-06-fleet-audit-readme-runtime-refresh.md  2026-07-02-doc-truth.md  2026-07-02-operator-surfaces.md
docs/runbooks/: cloud-run-cutover.md
scripts/: cutover_launchd.py  install_launchd.py  live_smoke.py  provision_cloud_run.py
src/xsource/: __init__.py  beat.py  budget.py  config.py  obs.py  runtime.py  secrets.py  wiring.py
stubs/clonway_cockpit/: __init__.pyi  agent.pyi  doctor.pyi  mail_identity.pyi  persona_soul.pyi  prompts.pyi  registry.pyi  state.pyi  walk.pyi
tests/: conftest.py  test_beat.py  test_budget.py  test_cockpit_contract.py  test_cockpit_placeholders.py  test_cockpit_render.py  test_config.py  test_dependency_pins.py  test_heartbeats.py  test_launchd_script.py  test_no_send_endpoints.py  test_runtime_env.py  test_safety.py  test_secrets.py  test_signals_build.py  test_signals_emit.py
tests/book/: test_importer.py  test_publish.py  test_publish_flow.py  test_search.py
tests/cli/: test_book_commands.py  test_equivalent_cli_parity.py  test_gateway_fallback.py  test_request_list.py  test_request_sync.py  test_runtime_commands.py
tests/contracts/: test_payment_required_contract.py
tests/deploy/: test_cloud_run_phase1.py  test_cloud_run_phase2.py  test_cloud_run_phase4.py
tests/invoices/: test_acks.py  test_capture.py  test_recovery.py
tests/outreach/: test_client.py  test_drafts.py
tests/p4/: test_checkatrade.py  test_followup.py  test_followup_wiring.py  test_reorder.py  test_reorder_capability.py  test_trigger_e2e.py  test_triggers.py
(+85 files in other folders)
