[project]
name = "xsource"
version = "0.1.0"
description = "Auto-Procurer — a Clonway fleet worker (cockpit + Signal emit + scan_horizon, scaffolded from clonway-cockpit's worker template)."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "clonway-cockpit",
    "typer>=0.12",
    "google-cloud-storage>=2.16",
    "requests>=2.34.2",
    "google-api-python-client>=2.197.0",
    "anthropic>=0.109.1",
]

[project.scripts]
xsource = "xsource.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xsource"]

# clonway-cockpit is the shared spine: cockpit shell, Signal model/emit, obs
# telemetry, the horizon contract. Pinned to a rev like every sibling worker.
# CI / `copier update` can repin; a local smoke build overrides this to a path
# source via [tool.uv.sources] in a uv override.
[tool.uv.sources]
clonway-cockpit = { git = "https://github.com/hearth-care/clonway-cockpit.git", rev = "4c63daf56500aecbb7e78c19660cbf94bd5c50ee" }

[dependency-groups]
dev = [
    "mypy>=1.20",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "horizon_stub: marks the xfail test guarding the empty @scan_horizon stub",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
ignore = [
    "E501",  # line-too-long — formatter owns it
    "E741",  # ambiguous-variable-name — over-strict in narrow scopes
]

[tool.mypy]
python_version = "3.12"
files = ["src/xsource"]
check_untyped_defs = true
warn_redundant_casts = true
no_implicit_optional = true
mypy_path = ["stubs"]

# Per-module overrides for genuinely untyped third-party packages.
# clonway_cockpit is covered by the local stubs/ package above.

[[tool.mypy.overrides]]
module = ["googleapiclient.*", "google.cloud.*", "google.oauth2.*"]
ignore_missing_imports = true
